--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -7,7 +7,7 @@ metadata:
   description: Um serviço que é gerenciado pelo Kong
   annotations:
     # ✅ OBRIGATÓRIA: O nome ou ID do 'Service' DENTRO DO KONG
-    kong-manager/service-name: 'meu-servico-no-kong'
+    kong-manager/service-name: 'sisof'
     
     # ✅ OBRIGATÓRIA: O 'id' que você definiu no app-config.yaml
     # Pode listar várias instâncias, separadas por vírgula (sem espaço)
