Change service lifecycle from production to dev

--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -17,5 +17,4 @@ metadata:
     kong-manager/spec: openapi-swagger.yaml
 spec:
   type: service
-  lifecycle: production
-  owner: 'group:default/minha-equipe'
+  lifecycle: dev
